--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,14 @@
-{
+{ "scopedRegistries": [
+    {
+      "name": "Keijiro",
+      "url": "https://registry.npmjs.com",
+      "scopes": [ "jp.keijiro" ]
+    }
+  ],
   "dependencies": {
     "com.unity.collab-proxy": "2.10.2",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.ide.rider": "3.0.38",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.high-definition": "17.1.0",
@@ -39,6 +46,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "jp.keijiro.kino.post-processing": "2.1.15"
   }
 }
